add calendar validation in Web

--- a/Mduchesneau.Scheduled.Web/styles/scheduled.css
+++ b/Mduchesneau.Scheduled.Web/styles/scheduled.css
@@ -8,6 +8,11 @@
     margin-bottom: 5px;
 }
 
+.actionButton {
+    margin: 10px 10px 10px 10px;
+    display: inline-block;
+}
+
 .importSection {
     display: flex;
     margin: 10px 10px 10px 10px;
